--- a/.github/workflows/worflow_1.yml
+++ b/.github/workflows/worflow_1.yml
@@ -10,6 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Execute tests
+        run: mvn test -Dtest=UrlUtilsIntegrationTest,UrlUtilsTests,FilmServiceTests,FilmServiceUnitaryTest
         
