add my own tests

--- a/.github/workflows/workflow_2.yml
+++ b/.github/workflows/workflow_2.yml
@@ -1,15 +1,13 @@
-name: AIS Workflow 1
+name: AIS Workflow 2
 
 on: 
-  push:
-    branches-ignore:
-      - main
+  pull_request:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone repo
+      - name: Clone
         uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -20,4 +18,5 @@ jobs:
         run: mvn test -Dtest=es/codeurjc/ais/nitflex/unitary/*
       - name: Integration tests
         run: mvn test -Dtest=es/codeurjc/ais/nitflex/integration/*
-        
+      - name: System tests
+        run: mvn test -Dtest=es/codeurjc/ais/nitflex/e2e/selenium/*
