--- a/.github/workflows/workflow_4.yml
+++ b/.github/workflows/workflow_4.yml
@@ -14,5 +14,5 @@ jobs:
           - name: Checkout repository
             uses: actions/checkout@v2
           - name: System test
-            if: matrix.browser != 'safari' || startsWith(matrix.os, 'macos-') && matrix.browser != 'edge' || startsWith(matrix.os, 'windows-')
-            run: mvn test -Dtest=SeleniumTests -Dbrowser=${{ matrix.os }}
+            if: (matrix.browser != 'safari' || startsWith(matrix.os, 'macos-')) && (matrix.browser != 'edge' || startsWith(matrix.os, 'windows-'))
+            run: mvn test -Dtest=SeleniumTests -Dbrowser=${{ matrix.browser }}
