add surefire to pom.xml

--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches-ignore:
       - main
-    paths:
-      - src/*
-      - pom.xml
+    paths-ignore:
+      - README.md
+      - .gitignore
+      - target/*
+      - .vscode
+
 
 jobs:
   test:
