--- a/.github/workflows/workflow_1.yml
+++ b/.github/workflows/workflow_1.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Unit tests
-        run: mvn test -Dtest=es/codeurjc/ais/nitflex/unitary/*
+        run: mvn test -Dtest="es/codeurjc/ais/nitflex/unitary/*"
       - name: Integration tests
-        run: mvn test -Dtest=es/codeurjc/ais/nitflex/integration/*
+        run: mvn test -Dtest="es/codeurjc/ais/nitflex/integration/*"
         
