--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -49,12 +49,6 @@ jobs:
       runs-on: ubuntu-latest
       needs: deploy
       steps:
-        - name: Get container name
-          run: echo "host=$(az container show \
-              --resource-group ${{ secrets.AZURE_GROUP }} \
-              --name nitflex \
-              --query ipAddress.fqdn)"  >> $GITHUB_OUTPUT
-          id: azure-host
         - name: Smoke Test
-          run: mvn test -Dhost=${{ steps.azure-host.outputs.host }} -Dtest=es/codeurjc/ais/nitflex/smoke/*
+          run: mvn test -Dhost=ariane-nicolas-nitflex.westeurope.azurecontainer.io -Dtest=es/codeurjc/ais/nitflex/smoke/*
 
