--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -50,5 +50,5 @@ jobs:
       needs: deploy
       steps:
         - name: Smoke Test
-          run: mvn test -Dhost=ariane-nicolas-nitflex.westeurope.azurecontainer.io -Dtest=es/codeurjc/ais/nitflex/smoke/*
+          run: mvn test -Dhost=ariane-nicolas-nitflex.westeurope.azurecontainer.io:8080 -Dtest=es/codeurjc/ais/nitflex/smoke/*
 
