add clone repo an java 17 to workflow 4 job test

--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -49,6 +49,12 @@ jobs:
       runs-on: ubuntu-latest
       needs: deploy
       steps:
+        - uses: actions/checkout@v4
+        - name: Set up JDK 17
+          uses: actions/setup-java@v4
+          with:
+            distribution: 'temurin'
+            java-version: '17'
         - name: Smoke Test
           run: mvn test -Dhost=ariane-nicolas-nitflex.westeurope.azurecontainer.io:8080 -Dtest=es/codeurjc/ais/nitflex/smoke/*
 
