--- a/.github/workflows/workflow_4.yml
+++ b/.github/workflows/workflow_4.yml
@@ -1,8 +1,9 @@
 name: AIS Workflow 4
 
 on:
-    schedule:
-      - cron: '0 0 * * *'
+    workflow_dispatch:
+ #   schedule:
+  #    - cron: '0 0 * * *'
 
 jobs:
     test:
