--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -1,9 +1,10 @@
 name: AIS Workflow 3
 
 on:
-  push:
-    branches:
-    - main
+  workflow_dispatch:
+  #push:
+   # branches:
+    #- main
 
 permissions:
   id-token: write
