added new feature : invalid year under 1895

--- a/.github/workflows/workflow_3.yml
+++ b/.github/workflows/workflow_3.yml
@@ -1,10 +1,9 @@
 name: AIS Workflow 3
 
 on:
-  workflow_dispatch:
-  #push:
-   # branches:
-    #- main
+  push:
+    branches:
+    - main
 
 permissions:
   id-token: write
