--- a/.github/workflows/workflow_4.yml
+++ b/.github/workflows/workflow_4.yml
@@ -1,9 +1,8 @@
 name: AIS Workflow 4
 
 on:
-    workflow_dispatch:
- #   schedule:
-  #    - cron: '0 0 * * *'
+    schedule:
+      - cron: '0 0 * * *'
 
 jobs:
     test:
